Marks section added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <section id="Games" class="Games">
 
         <div class="container">
+          <!-- Row 1 -->
           <div class="row">
             <div class="col-lg-4 mb-4 mb-lg-4">
               <div class="icon-box">
@@ -67,6 +68,7 @@
             </div>
           </div>
 
+          <!-- Row 2 -->
           <div class="row">
             <div class="col-lg-4 mb-4 mb-lg-4">
               <div class="icon-box">
@@ -92,6 +94,7 @@
             </div>
           </div>
 
+          <!-- Row 3 -->
           <div class="row">
             <div class="col-lg-4 mb-4 mb-lg-4">
               <div class="icon-box">
@@ -117,6 +120,7 @@
             </div>
           </div>
 
+          <!-- Row 4 -->
           <div class="row">
             <div class="col-lg-4 mb-4 mb-lg-4">
             </div>
@@ -127,6 +131,32 @@
               </div>
             </div>
             <div class="col-lg-4 mb-4 mb-lg-4">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <h1 class="cover-heading">Pokemon Marks Tracker</h1>
+      <p class="lead">Keep track of how many markings you have and which ones you need in each game.</p>
+
+      <!-- ======= Markings Section ======= -->
+      <section id="Games" class="Games">
+
+        <div class="container">
+          <!-- Row 1 -->
+          <div class="row">
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_swsh.html#marks"><img src="assets/images/pokemon_swsh_logo.png"
+                    class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Sword & Shield logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_sv.html#marks"><img src="assets/images/pokemon_sv_logo.jpg"
+                    class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Scarlet & Violet logos"></a></img>
+              </div>
             </div>
           </div>
         </div>
