--- a/pkmn_sv.html
+++ b/pkmn_sv.html
@@ -51,8 +51,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck89" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck89">89</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck89" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck89">89</label>
                   </div>
                 </td>
                 <td>Paldea Champion Ribbon</td>
@@ -61,8 +61,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck90" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck90">90</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck90" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck90">90</label>
                   </div>
                 </td>
                 <td>Once-in-a-Lifetime Ribbon</td>
@@ -71,8 +71,8 @@
               <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck91" name="ribbon">
-                    <label class="custom-control-label" for="tableDefaultCheck91">91</label>
+                    <input type="checkbox" class="custom-control-input" id="tableRibbonsCheck91" name="ribbon">
+                    <label class="custom-control-label" for="tableRibbonsCheck91">91</label>
                   </div>
                 </td>
                 <td>Hisui Ribbon</td>
@@ -83,13 +83,148 @@
           <!-- 
         <button type="button" value="save" class="button" onclick="save()">Save</button>
         <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>-->
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
         </div>
       </section>
 
       <p>Big thanks to <a
-          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
-          target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+        href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
+        target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+      <h2 id="marks" class="marks">Marks</h2>
+
+      <p>You cannot obtain all of these marks on a single Pokemon. These can only be found on wild Pokemon.</p>
+        
+      <section>
+        <div class="containers">
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Mark</th>
+                <th>How to get</th>
+                <th>Chance</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck46" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck46">46</label>
+                  </div>
+                </td>
+                <td>Destiny Mark</td>
+                <td>Found on wild Pokémon during the date registered as the player's birthday.</td>
+                <td>1/25 on player's birthday. Unobtainable on all other dates or if no birthday has been set</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck47" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck47">47</label>
+                  </div>
+                </td>
+                <td>Jumbo Mark</td>
+                <td>Speak to the Hiker near the Mesagoza (West) Pokémon Center. Must have a scale of 255</td>
+                <td>1/16512 - Base rate
+                    <br> 1/128 Humungo Power Lv. 1
+                    <br> 1/96 Humungo Power Lv. 2
+                    <br> 1/64 Humungo Power Lv. 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck48" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck48">48</label>
+                  </div>
+                </td>
+                <td>Mini Mark</td>
+                <td>Speak to the Hiker near the Mesagoza (West) Pokémon Center. Must have a scale of 0</td>
+                <td>1/16512 - Base rate
+                  <br> 1/128 Teensy Power Lv. 1
+                  <br> 1/96 Teensy Power Lv. 2
+                  <br> 1/64 Teensy Power Lv. 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck49" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck49">49</label>
+                  </div>
+                </td>
+                <td>Itemfinder Mark</td>
+                <td>Currently unobtainable. According to Bulbapedia, this is likely due to an oversight.</td>
+                <td>Unobtainable</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck50" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck50">50</label>
+                  </div>
+                </td>
+                <td>Partner Mark</td>
+                <td>Granted to party Pokémon (with friendship of 200 or above) with player steps.
+                  (Does not require them to be walking outside of their Poké Ball)</td>
+                <td>Random</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck51" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck51">51</label>
+                  </div>
+                </td>
+                <td>Gourmand Mark</td>
+                <td>Can be found on party Pokémon after making a sandwich
+                  when any Meal Power is applied.</td>
+                <td>Random</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck52" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck52">52</label>
+                  </div>
+                </td>
+                <td>Alpha Mark</td>
+                <td>Transfer an alpha Pokémon from Legends: Arceus via HOME</td>
+                <td>Guaranteed</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck53" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck53">53</label>
+                  </div>
+                </td>
+                <td>Mightiest Mark</td>
+                <td>Pokémon caught during 7★ Tera Raid Battle events</td>
+                <td>Guaranteed</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableMarksCheck54" name="marks">
+                    <label class="custom-control-label" for="tableMarksCheck54">54</label>
+                  </div>
+                </td>
+                <td>Titan Mark</td>
+                <td>Found on former Titan Pokémon
+                  that reappear after obtaining their Titan Badge.</td>
+                <td>Guaranteed</td>
+              </tr>
+            </tbody>
+          </table>
+          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+        </div>
+      </section>
+
+      <p style="padding-top: 10px;">Big thanks to <a
+        href="https://bulbapedia.bulbagarden.net/wiki/Mark#Generation_IX"
+        target="_blank">Bulbapedia</a> for the information!</p>
 
     </main><!-- End of main -->
 
@@ -116,14 +251,14 @@
           fav = { id: $(this).attr('id'), value: $(this).prop('checked') };
           favs.push(fav);
         });
-        localStorage.setItem("ribbonListXDC", JSON.stringify(favs));
+        localStorage.setItem("ribbonListSV", JSON.stringify(favs));
 
         console.log(favs);
       });
 
       // Parses through the created json file and reasigns values to the checkboxes
       $(document).ready(function () {
-        var list = JSON.parse(localStorage.getItem('ribbonListXDC'));
+        var list = JSON.parse(localStorage.getItem('ribbonListSV'));
         if (!list.length) { return };
         console.debug(list);
 
@@ -135,7 +270,7 @@
 
       function clearAll() {
         location.reload();
-        localStorage.removeItem('ribbonListXDC');
+        localStorage.removeItem('ribbonListSV');
       }
     </script>
 
